--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,8 @@
+@import "bulma/sass/utilities/initial-variables";
+@import "bulma/sass/utilities/derived-variables";
+
+$body-color: $white;
+$body-background-color: #31188c;
+// $navbar-background-color: $body-background-color;
+
 @import "bulma";
